Made all body text calibri. Also fixed wrapping on long nirnroot column.

--- a/guide.css
+++ b/guide.css
@@ -34,7 +34,6 @@ img{
 .collapsibleContent {
 	display: inline;
 	overflow: hidden;
-	font-family: Calibri;
 }
 
 .active:after {
