--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 }
 
 html{
-	font-family: serif;
+	font-family: Calibri,serif;
 	scroll-padding-top: var(--topbar-height);/*below topbar*/
 }
 
@@ -176,9 +176,11 @@ kbd {
 .progress{
 	font-size: min(3em,12vw); /* on mobile, 3em is obnoxious so we decrease it */
 	font-weight: bold;
+	font-family: serif;
 }
 
 .h2,.sectionTitle{
+	font-family: serif;
 	font-size: 2.2em;
 	font-weight: bold;
 	/*break-after:avoid;*/
@@ -195,6 +197,7 @@ kbd {
 }
 
 .categoryTitle{
+	font-family: serif;
 	font-size: 1.5em;
 	border-bottom: 2px solid gray;
 	text-align: center;
